# RoDots

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json  spec.md  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
examples/: README.md  daily-handoff.view.rdot  locked-procedure.rock.rdot  minutes.rdot  operator.rock.rdot  operator.view.rdot  project-kickoff.rdot  report.rdot  【仕様書】共通システム開発_(v1.0.0).rdot
portable/: README.md
portable/config/: rodots.config.json
portable/extensions/: README.md
scripts/: package-portable.ps1
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AmbientTimer.svelte  Breadcrumbs.svelte  DateTimeGadget.svelte  FileTemplateMenu.svelte
src/lib/: fileTemplates.ts  modes.ts  parser.ts  tauri.ts  widgetConfig.ts
