[package]
name = "rodots"
version = "0.1.0"
description = "RoDots desktop document assistant"
authors = ["RoDots"]
edition = "2021"

[lib]
name = "rawdots_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros"] }
url = "2"
zip = "2"
